# picopterx

./: .gitattributes
code/: .README.md.swp  .gitignore  CMakeLists.txt  README.md
code/cmake_modules/: FindOpenCV.cmake
code/configs/: auto.json
code/src/base/: CMakeLists.txt  flightcontroller.cpp
code/src/modules/: gridspace.cpp
code/src/server/: CMakeLists.txt  picopter.cpp
docs/CustomManuals/: Hexacopter Operator Manual.docx  Hexacopter RaspberryPi Manual.docx  Matrice Operator Guide.docx  Onboard Computer Options.docx  PiCopterX Software Development Manual.docx
